[gd_scene load_steps=36 format=2]

[ext_resource path="res://scratch_drawer/scratch_drawer.gd" type="Script" id=1]
[ext_resource path="res://scratch_drawer/line_1.png" type="Texture" id=2]
[ext_resource path="res://scratch_drawer/line_0.png" type="Texture" id=3]
[ext_resource path="res://scratch_drawer/red_line.png" type="Texture" id=4]
[ext_resource path="res://scratch_drawer/road.png" type="Texture" id=5]
[ext_resource path="res://scratch_drawer/blue_line.png" type="Texture" id=6]
[ext_resource path="res://scratch_drawer/underline.png" type="Texture" id=7]
[ext_resource path="res://scratch_drawer/alert_fence.png" type="Texture" id=8]
[ext_resource path="res://scratch_drawer/line_4.png" type="Texture" id=9]
[ext_resource path="res://scratch_drawer/green_line.png" type="Texture" id=10]
[ext_resource path="res://canvas/canvas.tscn" type="PackedScene" id=11]
[ext_resource path="res://scratch_drawer/eraser.png" type="Texture" id=12]
[ext_resource path="res://scratch_drawer/line_3.png" type="Texture" id=13]
[ext_resource path="res://scratch_drawer/line_5.png" type="Texture" id=14]
[ext_resource path="res://scratch_drawer/Clear.png" type="Texture" id=15]
[ext_resource path="res://scratch_drawer/dash.png" type="Texture" id=16]
[ext_resource path="res://scratch_drawer/Image.png" type="Texture" id=17]
[ext_resource path="res://scratch_drawer/line_2.png" type="Texture" id=18]
[ext_resource path="res://scratch_drawer/undo.png" type="Texture" id=19]
[ext_resource path="res://scratch_drawer/redo.png" type="Texture" id=20]
[ext_resource path="res://scratch_drawer/line_rounded.tscn" type="PackedScene" id=21]
[ext_resource path="res://scratch_drawer/line_thick.tscn" type="PackedScene" id=22]
[ext_resource path="res://scratch_drawer/line_width_curve.tscn" type="PackedScene" id=23]
[ext_resource path="res://scratch_drawer/line_gradient.tscn" type="PackedScene" id=24]
[ext_resource path="res://scratch_drawer/line_rainbow.tscn" type="PackedScene" id=25]
[ext_resource path="res://scratch_drawer/line_blue.tscn" type="PackedScene" id=26]
[ext_resource path="res://scratch_drawer/line_dash.tscn" type="PackedScene" id=27]
[ext_resource path="res://scratch_drawer/line_green.tscn" type="PackedScene" id=28]
[ext_resource path="res://scratch_drawer/line_red.tscn" type="PackedScene" id=29]
[ext_resource path="res://scratch_drawer/line_fence.tscn" type="PackedScene" id=30]
[ext_resource path="res://scratch_drawer/line_underlined.tscn" type="PackedScene" id=31]
[ext_resource path="res://scratch_drawer/line_road.tscn" type="PackedScene" id=32]
[ext_resource path="res://canvas/layer.tscn" type="PackedScene" id=33]
[ext_resource path="res://scratch_drawer/line_erase.tscn" type="PackedScene" id=34]

[sub_resource type="ButtonGroup" id=4]

[node name="ScratchDrawer" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1016.0
margin_bottom = 24.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 24.0
text = "color"
color = Color( 0.156863, 0.156863, 0.196078, 1 )

[node name="ToggleMode" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 156.0
margin_bottom = 24.0
text = "toggle mode"

[node name="Undo" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 24.0
text = "Undo"
icon = ExtResource( 19 )

[node name="Redo" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 290.0
margin_bottom = 24.0
text = "Redo"
icon = ExtResource( 20 )

[node name="Clear" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 294.0
margin_right = 322.0
margin_bottom = 24.0
icon = ExtResource( 15 )

[node name="Capture" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 369.0
margin_right = 429.0
margin_bottom = 24.0
text = "capture"

[node name="Export" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 365.0
margin_bottom = 24.0
text = "export"
icon = ExtResource( 17 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1009.0
margin_bottom = 557.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 550.0

[node name="Line" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 24.0
hint_tooltip = "line"
pressed = true
group = SubResource( 4 )
icon = ExtResource( 3 )

[node name="Rounded" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 40.0
margin_bottom = 52.0
hint_tooltip = "rounded"
group = SubResource( 4 )
icon = ExtResource( 2 )

[node name="Thick" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 80.0
hint_tooltip = "thick"
group = SubResource( 4 )
icon = ExtResource( 18 )

[node name="WidthCurve" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 40.0
margin_bottom = 108.0
hint_tooltip = "width curve"
group = SubResource( 4 )
icon = ExtResource( 13 )

[node name="Dash" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 40.0
margin_bottom = 136.0
hint_tooltip = "dash"
group = SubResource( 4 )
icon = ExtResource( 16 )

[node name="Underline" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 40.0
margin_bottom = 164.0
hint_tooltip = "underline, best with full value colors"
group = SubResource( 4 )
icon = ExtResource( 7 )

[node name="Gradient" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 40.0
margin_bottom = 192.0
hint_tooltip = "gradient"
group = SubResource( 4 )
icon = ExtResource( 9 )

[node name="Rainbow" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 40.0
margin_bottom = 220.0
hint_tooltip = "rainbow"
group = SubResource( 4 )
icon = ExtResource( 14 )

[node name="Fence" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 40.0
margin_bottom = 248.0
hint_tooltip = "width curve"
group = SubResource( 4 )
icon = ExtResource( 8 )

[node name="Road" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 40.0
margin_bottom = 276.0
hint_tooltip = "road"
group = SubResource( 4 )
icon = ExtResource( 5 )

[node name="Red" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 40.0
margin_bottom = 304.0
hint_tooltip = "red subtraction"
group = SubResource( 4 )
icon = ExtResource( 4 )

[node name="Green" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 40.0
margin_bottom = 332.0
hint_tooltip = "green subtraction"
group = SubResource( 4 )
icon = ExtResource( 10 )

[node name="Blue" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 40.0
margin_bottom = 360.0
hint_tooltip = "blue subtraction"
group = SubResource( 4 )
icon = ExtResource( 6 )

[node name="Erase" type="CheckBox" parent="VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 364.0
margin_right = 40.0
margin_bottom = 388.0
hint_tooltip = "underline, best with full value colors"
group = SubResource( 4 )
icon = ExtResource( 12 )

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 1002.0
margin_bottom = 550.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 951.0
margin_bottom = 543.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer"]
margin_right = 944.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Canvas" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect" instance=ExtResource( 11 )]

[node name="Layer2" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
modulate = Color( 0.156863, 0.156863, 0.196078, 1 )
line = ExtResource( 21 )

[node name="Layer3" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
modulate = Color( 0.156863, 0.156863, 0.196078, 1 )
line = ExtResource( 22 )

[node name="Layer4" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
modulate = Color( 0.156863, 0.156863, 0.196078, 1 )
line = ExtResource( 23 )

[node name="Layer5" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
modulate = Color( 0.156863, 0.156863, 0.196078, 1 )
line = ExtResource( 27 )

[node name="Layer6" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
modulate = Color( 0.156863, 0.156863, 0.196078, 1 )
line = ExtResource( 31 )

[node name="Layer7" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
modulate = Color( 0.156863, 0.156863, 0.196078, 1 )
line = ExtResource( 24 )

[node name="Layer8" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
line = ExtResource( 25 )

[node name="Layer9" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
line = ExtResource( 30 )

[node name="Layer10" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
line = ExtResource( 32 )

[node name="Layer11" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
line = ExtResource( 29 )

[node name="Layer12" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
line = ExtResource( 28 )

[node name="Layer13" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
line = ExtResource( 26 )

[node name="Layer14" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/ScrollContainer/ColorRect/Canvas" instance=ExtResource( 33 )]
line = ExtResource( 34 )

[connection signal="color_changed" from="VBoxContainer/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/ToggleMode" to="." method="_on_ToggleMode_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Redo" to="." method="_on_Redo_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Capture" to="." method="_on_Capture_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Export" to="." method="_on_Export_pressed"]
